Convert fa user times to md person outline

--- a/scss/common/_material-icons.scss
+++ b/scss/common/_material-icons.scss
@@ -477,6 +477,10 @@
   @include material-icons('person_add');
 }
 
+.fa-user-times {
+  @include material-icons('person_outline');
+}
+
 .fa-users {
   @include material-icons('people');
 }
